--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -1,13 +1,33 @@
-﻿<Window x:Class="StasIvanExKitchen.MainWindow"
+﻿<Window x:Class="StasIvanExKitchen.MainWindow" Icon="Resources/icon.ico"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:StasIvanExKitchen"
         mc:Ignorable="d"
-        Title="" Height="450" Width="800">
-    
-    <Grid>
-        
+        Title="ООО «Столовые приборы»" Height="450" Width="800">
+
+    <Grid Background="SpringGreen">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition></ColumnDefinition>
+            <ColumnDefinition></ColumnDefinition>
+            <ColumnDefinition></ColumnDefinition>
+            <ColumnDefinition></ColumnDefinition>
+            <ColumnDefinition></ColumnDefinition>
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition></RowDefinition>
+            <RowDefinition></RowDefinition>
+            <RowDefinition></RowDefinition>
+            <RowDefinition></RowDefinition>
+            <RowDefinition></RowDefinition>
+        </Grid.RowDefinitions>
+        <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
+            <Image Source="/Resources/logo.png" Height="50"></Image>
+        </StackPanel>
+        <TextBlock Text="Авторизация" Grid.Column="2"></TextBlock>
+        <Frame x:Name="MainFrame" Grid.Row="1" Grid.ColumnSpan="5" Grid.RowSpan="3"></Frame>
+        <Button x:Name="btnBack" Height="30" Grid.Column="2" Grid.Row="4" Content="Назад" Click="btnBack_Click" Visibility="Collapsed"></Button>
+        <Button x:Name="btnVhodGost" Height="30" Grid.Column="4" Content="Войти гостем" Click="btnVhodGost_Click"></Button>
     </Grid>
 </Window>
