--- a/Pages/Autorisation.xaml
+++ b/Pages/Autorisation.xaml
@@ -25,11 +25,11 @@
         </Grid.RowDefinitions>
         <StackPanel Orientation="Vertical" Grid.Column="1" Grid.RowSpan="2" Grid.Row="1" Grid.ColumnSpan="2" Margin="80,0,80,0">
             <TextBlock Text="Логин"/>
-            <TextBlock Text="Пароль" Margin="30"/>
+            <TextBlock Text="Пароль" Margin="15"/>
         </StackPanel>
         <StackPanel Orientation="Vertical" Grid.Column="2" Grid.ColumnSpan="2" Grid.Row="1" Grid.RowSpan="2" Margin="80,0,80,0">
-            <TextBox x:Name="Login"></TextBox>
-            <TextBox x:Name="Password" Margin="0,30" />
+            <TextBox x:Name="Login" Margin="0"></TextBox>
+            <TextBox x:Name="Password" Margin="18"></TextBox>
         </StackPanel>
         <StackPanel Grid.Column="1" Grid.Row="3" Grid.ColumnSpan="3" Orientation="Vertical" HorizontalAlignment="Center">
             <StackPanel Orientation="Horizontal">
@@ -39,5 +39,6 @@
             <TextBox x:Name="CaptchaInput"></TextBox>
         </StackPanel>
         <Button x:Name="Vhod" Grid.Column="2" Grid.Row="4" Content="Войти" Style="{StaticResource Save}" Click="Vhod_Click"></Button>
+        <Button x:Name="Regbtn" Content="Регистрация" Grid.Row="4" Click="Regbtn_Click"></Button>
     </Grid>
 </Page>
