--- a/Pages/ProductsKitchen.xaml
+++ b/Pages/ProductsKitchen.xaml
@@ -3,12 +3,63 @@
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:local="clr-namespace:StasIvanExKitchen.Pages"
+      xmlns:local="clr-namespace:StasIvanExKitchen.Pages" xmlns:sys="clr-namespace:System;assembly=mscorlib"
       mc:Ignorable="d" 
-      d:DesignHeight="450" d:DesignWidth="800"
-      Title="ProductsKitchen">
+      d:DesignHeight="450" d:DesignWidth="1200"
+      Title="ProductsKitchen" IsVisibleChanged="Page_IsVisibleChanged">
 
+    <Page.Resources>
+        <sys:String x:Key="NullImage">
+            pack://application:,,,/Resources/picture.png
+        </sys:String>
+    </Page.Resources>
+    
     <Grid>
-        
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition></ColumnDefinition>
+            <ColumnDefinition></ColumnDefinition>
+            <ColumnDefinition></ColumnDefinition>
+            <ColumnDefinition></ColumnDefinition>
+            <ColumnDefinition></ColumnDefinition>
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition></RowDefinition>
+            <RowDefinition></RowDefinition>
+            <RowDefinition></RowDefinition>
+            <RowDefinition></RowDefinition>
+            <RowDefinition Height="50"></RowDefinition>
+        </Grid.RowDefinitions>
+        <DataGrid x:Name="DataGridKitchen" Grid.ColumnSpan="5" Grid.RowSpan="4" IsReadOnly="True" AutoGenerateColumns="False">
+            <DataGrid.Columns>
+                <DataGridTemplateColumn Header="Изображение" Width="110">
+                    <DataGridTemplateColumn.CellTemplate>
+                        <DataTemplate>
+                            <Image Width="100" Height="100" Source="{Binding ProductImage, FallbackValue={StaticResource NullImage}}"></Image>
+                        </DataTemplate>
+                    </DataGridTemplateColumn.CellTemplate>
+                </DataGridTemplateColumn>
+                <DataGridTextColumn Header="Артикул" Width="70" Binding="{Binding ProductArticleNumber}"></DataGridTextColumn>
+                <DataGridTextColumn Header="Наименование"  Width="120" Binding="{Binding ProductName}"></DataGridTextColumn>
+                <DataGridTextColumn Header="Описание" Width="85" Binding="{Binding ProductDescription}"></DataGridTextColumn>
+                <DataGridTextColumn Header="Категория" Width="85" Binding="{Binding ProductCategory}"></DataGridTextColumn>
+                <DataGridTextColumn Header="Производитель" Width="125" Binding="{Binding ProductManufacturer}"></DataGridTextColumn>
+                <DataGridTextColumn Header="Цена" Width="45" Binding="{Binding ProductCost}"></DataGridTextColumn>
+                <DataGridTextColumn Header="Макс.скидка" Width="100" Binding="{Binding ProductMaxDiscount}"></DataGridTextColumn>
+                <DataGridTextColumn Header="Скидка" Width="60" Binding="{Binding ProductDiscountAmount}"></DataGridTextColumn>
+                <DataGridTextColumn Header="Хранится" Width="80" Binding="{Binding ProductQuantityInStock}"></DataGridTextColumn>
+                <DataGridTextColumn Header="Заказчик" Width="75" Binding="{Binding ProductProvider}"></DataGridTextColumn>
+                <DataGridTextColumn Header="Измерение" Width="90" Binding="{Binding ProductUnit}"></DataGridTextColumn>
+                <DataGridTextColumn Header="Статус" Width="55" Binding="{Binding ProductStatus}"></DataGridTextColumn>
+                <DataGridTemplateColumn Width="auto">
+                    <DataGridTemplateColumn.CellTemplate>
+                        <DataTemplate>
+                            <Button Content="Редактировать" Name="btnEditTovar" Click="btnEditTovar_Click" Style="{StaticResource Edit}"></Button>
+                        </DataTemplate>
+                    </DataGridTemplateColumn.CellTemplate>
+                </DataGridTemplateColumn>
+            </DataGrid.Columns>
+        </DataGrid>
+        <Button x:Name="btnAdd" Content="Добавить" Grid.Column="1" Grid.ColumnSpan="2" Grid.Row="4" Style="{StaticResource Save}" Click="btnAdd_Click"></Button>
+        <Button x:Name="btnDelete" Content="Удалить" Grid.Column="1" Grid.ColumnSpan="4" Grid.Row="4" Style="{StaticResource Delete}" Click="btnDelete_Click"></Button>
     </Grid>
 </Page>
