--- a/Pages/AddOrder.xaml
+++ b/Pages/AddOrder.xaml
@@ -32,14 +32,14 @@
         <TextBlock Text="ФИО заказчика" Grid.Row="5"></TextBlock>
         <TextBlock Text="Код для выдачи" Grid.Row="6"></TextBlock>
         <TextBlock Text="Статус заказа" Grid.Row="7"></TextBlock>
-        <TextBox x:Name="NomerOrder" Grid.Column="1"></TextBox>
-        <TextBox x:Name="SostavOrder" Grid.Column="1" Grid.Row="1"></TextBox>
-        <TextBox x:Name="DataofOrder" Grid.Column="1" Grid.Row="2"></TextBox>
-        <TextBox x:Name="DataDeliveryofOrder" Grid.Column="1" Grid.Row="3"></TextBox>
-        <TextBox x:Name="PickUpOrder" Grid.Column="1" Grid.Row="4"></TextBox>
-        <TextBox x:Name="FIOOrder" Grid.Column="1" Grid.Row="5"></TextBox>
-        <TextBox x:Name="EnterCodeOrder" Grid.Column="1" Grid.Row="6"></TextBox>
-        <TextBox x:Name="StatusOrder" Grid.Column="1" Grid.Row="7"></TextBox>
+        <TextBox x:Name="NomerOrder" Text="{Binding NumberOrder}" Grid.Column="1"></TextBox>
+        <TextBox x:Name="SostavOrder" Text="{Binding SostavOrder}" Grid.Column="1" Grid.Row="1"></TextBox>
+        <TextBox x:Name="DataofOrder" Text="{Binding OrderDate}" Grid.Column="1" Grid.Row="2"></TextBox>
+        <TextBox x:Name="DataDeliveryofOrder" Text="{Binding OrderDeliveryDate}" Grid.Column="1" Grid.Row="3"></TextBox>
+        <TextBox x:Name="PickUpOrder" Text="{Binding OrderPickupPoint}" Grid.Column="1" Grid.Row="4"></TextBox>
+        <TextBox x:Name="FIOOrder" Text="{Binding FioUser}" Grid.Column="1" Grid.Row="5"></TextBox>
+        <TextBox x:Name="EnterCodeOrder" Text="{Binding CodeEnter}" Grid.Column="1" Grid.Row="6"></TextBox>
+        <TextBox x:Name="StatusOrder" Text="{Binding OrderStatus}" Grid.Column="1" Grid.Row="7"></TextBox>
         <Button x:Name="SavebtnOrder" Content="Сохранить" Grid.ColumnSpan="2" Grid.Row="9" Style="{StaticResource Save}" Click="SavebtnOrder_Click"></Button>
     </Grid>
 </Page>
