--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -25,7 +25,7 @@
         <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
             <Image Source="/Resources/logo.png" Height="50"></Image>
         </StackPanel>
-        <TextBlock Text="Авторизация" Grid.Column="2"></TextBlock>
+        <TextBlock Text="{Binding ElementName=MainFrame, Path=Content.Title}" Grid.Column="2"></TextBlock>
         <Frame x:Name="MainFrame" Grid.Row="1" Grid.ColumnSpan="5" Grid.RowSpan="3" ContentRendered="MainFrame_ContentRendered"></Frame>
         <Button x:Name="btnBack" Height="30" Grid.Column="2" Grid.Row="4" Content="Назад" Click="btnBack_Click" Visibility="Collapsed"></Button>
         <Button x:Name="btnVhodGost" Height="30" Grid.Column="4" Content="Войти гостем" Click="btnVhodGost_Click"></Button>
