--- a/Pages/AddOrder.xaml
+++ b/Pages/AddOrder.xaml
@@ -6,7 +6,7 @@
       xmlns:local="clr-namespace:StasIvanExKitchen.Pages"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
-      Title="AddOrder">
+      Title="Добавить заказ">
 
     <Grid>
         <Grid.ColumnDefinitions>
