--- a/Pages/AddTovarKitchen.xaml
+++ b/Pages/AddTovarKitchen.xaml
@@ -6,7 +6,7 @@
       xmlns:local="clr-namespace:StasIvanExKitchen.Pages"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
-      Title="AddTovarKitchen">
+      Title="Добавить товар">
 
     <Grid>
         <Grid.ColumnDefinitions>
