--- a/Pages/Registration.xaml
+++ b/Pages/Registration.xaml
@@ -6,7 +6,7 @@
       xmlns:local="clr-namespace:StasIvanExKitchen.Pages"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
-      Title="Registration">
+      Title="Регистрация">
 
     <Grid>
         <Grid.ColumnDefinitions>
